ch:button style created and applied

--- a/Project/Sources/styleSheets_mac.css
+++ b/Project/Sources/styleSheets_mac.css
@@ -2,6 +2,10 @@
 	font-family: Lucida Grande;
 	font-size: 12px;
 }
+.button {
+	font-family: Lucida Grande;
+	font-size: 13px;
+}
 
 .Extra_Large {
 	font-family: Helvetica Neue;
