--- a/Project/Sources/styleSheets_windows.css
+++ b/Project/Sources/styleSheets_windows.css
@@ -7,6 +7,11 @@
 	font-size: 12px;
 }
 
+.button {
+	font-family: Segoe UI;
+	font-size: 12px;
+}
+
 .Extra_Large {
 	font-family: Arial;
 	font-size: 14px;
